log

Thu Mar 10 10:04:33 -03 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
test.c: In function 'test_suma_n':
test.c:90:5: error: 'sprintf' argument 3 overlaps destination object 'CHAIN.45' [-Werror=restrict]
   90 |     sprintf(msg,"%s]",msg);
      |     ^~~~~~~~~~~~~~~~~~~~~~
test.c:78:5: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   78 | int test_suma_n(){
      |     ^~~~~~~~~~~
test.c:88:9: error: 'sprintf' argument 3 overlaps destination object 'CHAIN.45' [-Werror=restrict]
   88 |         sprintf(msg,"%s %d,",msg,a[i]);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:78:5: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   78 | int test_suma_n(){
      |     ^~~~~~~~~~~
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
08cd5d9
Thu Mar 10 10:07:06 -03 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
test.c: In function 'test_suma_n':
test.c:90:5: error: 'sprintf' argument 3 overlaps destination object 'CHAIN.45' [-Werror=restrict]
   90 |     sprintf(msg,"%s]",msg);
      |     ^~~~~~~~~~~~~~~~~~~~~~
test.c:78:5: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   78 | int test_suma_n(){
      |     ^~~~~~~~~~~
test.c:88:9: error: 'sprintf' argument 3 overlaps destination object 'CHAIN.45' [-Werror=restrict]
   88 |         sprintf(msg,"%s %d,",msg,a[i]);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:78:5: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   78 | int test_suma_n(){
      |     ^~~~~~~~~~~
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1: all warnings being treated as errors
Compilation failed
74425a3
Thu Mar 10 10:47:58 -03 2022: 
 exercises.c | 29 ++++++++++++++++-------------
 1 file changed, 16 insertions(+), 13 deletions(-)
test.c: In function 'test_suma_n':
test.c:90:21: error: 'sprintf' may write a terminating nul past the end of the destination [-Werror=format-overflow=]
   90 |     sprintf(msg,"%s]",msg);
      |                     ^
test.c:90:5: note: 'sprintf' output between 2 and 301 bytes into a destination of size 300
   90 |     sprintf(msg,"%s]",msg);
      |     ^~~~~~~~~~~~~~~~~~~~~~
test.c:90:5: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
test.c:88:25: error: '%d' directive writing between 1 and 11 bytes into a region of size between 0 and 299 [-Werror=format-overflow=]
   88 |         sprintf(msg,"%s %d,",msg,a[i]);
      |                         ^~
test.c:88:9: note: 'sprintf' output between 4 and 313 bytes into a destination of size 300
   88 |         sprintf(msg,"%s %d,",msg,a[i]);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
test.c:88:9: error: 'sprintf' argument 3 overlaps destination object 'msg' [-Werror=restrict]
test.c:14:6: note: destination object referenced by 'restrict'-qualified argument 1 was declared here
   14 | char msg[300];
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
de5834c
